--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,14 +1,13 @@
 \section{Introduction}
 \label{sec:introduction}
-Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) are explained by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation},  at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The theory of inflation elegantly resolves fundamental issues with the hot Big Bang theory, such as the isotropy of the CMB temperature, absence of magnetic monopole, and flatness of the Universe. At the end of inflation, the Universe was reheated and primordial fluctuations are generated to seed the subsequent growth of structure. While the presence of an inflationary era is certain but the details of the inflation field still remain highly unknown, and statistical properties of primordial fluctuations pose as one of the puzzling questions in modern observational cosmology. Analyses of cosmological data have revealed that initial conditions of the Universe are consistent with Gaussian fluctuations; however, there are some classes of models that predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity depends on the local value of the gravitational potential $\phi$ and is parameterized by a nonlinear parameter $\fnl$ \citep{komatsu2001acoustic},
+Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) are explained by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation},  at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The theory of inflation elegantly addresses fundamental issues with the hot Big Bang theory, such as the isotropy of the CMB temperature, absence of magnetic monopole, and flatness of the Universe. At the end of inflation, the Universe was reheated and primordial fluctuations are generated to seed the subsequent growth of structure. While the presence of an inflationary era is certain but the details of the inflation field still remain highly unknown, and statistical properties of primordial fluctuations pose as one of the puzzling questions in modern observational cosmology. Analyses of cosmological data have revealed that initial conditions of the Universe are consistent with Gaussian fluctuations; however, there are some classes of models that predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity depends on the local value of the gravitational potential $\phi$ and is parameterized by a nonlinear parameter $\fnl$ \citep{komatsu2001acoustic},
 \begin{equation}
     \Phi = \phi + \fnl [\phi^{2} -  <\phi^{2}>].
 \end{equation}
 Standard slow roll inflation predicts $\fnl$ to be of order $10^{-2}$, while multifield theories predict considerably higher values than unity. Therefore, a robust measurement of $\fnl$ can be considered as the first stepping stone toward better understanding the physics of the early Universe. 
 
+Current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. CMB S4, next generation of CMB experiments, will improve this constraint but since CMB is limited by cosmic variance, it alone cannot further enhance to break the degeneracy amongst inflationary models. However, combining CMB with LSS data could cancel cosmic variance, partially if not completely, and enhance these limits to a precision level required to differentiate between various inflationary models \citep[see, e.g.,][]{schmittfull2018PhRvD}.  
 
-Current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. CMB S4, next generation of CMB experiments, will improve this constraint but since CMB is limited by cosmic variance, it alone cannot further enhance to break the degeneracy amongst inflationary models. However, combining CMB with LSS data could cancel cosmic variance, partially if not completely, and enhance these limits to a precision level required to differentiate between various inflationary models.  
+PNG alters local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result it introduces a $k^{-2}$-dependent shift in halo bias which leaves its signature on the large scales in the two-point clustering of galaxies and quasars \citep[see, e.g.,][]{dalal2008imprints}. Measuring $\fnl$ using the scale-dependent bias is however very challenging due to the presence of observational systematic effects which cause excess clustering signal on the same scales sensitive to $\fnl$. Previous studies with galaxy and quasar clustering have been hindered dramatically by spurious fluctuations in target density, which are due to the variation of imaging properties across the sky \citep{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS \mr{DRX} does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to relax the selection criteria to  include fainter targets. Assuming imaging systematics are under control, the next generation of galaxy surveys such as DESI and the Rubin Observatory are forecast to yield unprecedented constraints on $\fnl$.
 
-It has been shown that PNG has a scale-dependent signature on the two-point clustering of biased tracers of dark matter gravitational field. The clustering of biased tracers is boosted on large scales by a scale-dependent shift proportional to $k^{-2}$ \citep[see,][]{dalal2008imprints}. Previous studies of $\fnl$ with galaxy and quasar clustering have been hindered dramatically by spurious fluctuations in target density, which are due to the variation of imaging properties across the sky \citep{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS DRX does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and select faint targets. Assuming imaging systematics are under control, the next generation of galaxy surveys such as DESI and the Rubin Observatory are forecast to yield unprecedented constraints on $\fnl$.
-
-In this paper, we use photometric luminous red galaxies from the DESI Legacy Imaging Surveys Data Release 9 to constrain the primordial non-Gaussianity parameter $\fnl$, while marginalizing over bias and shotnoise parameters. We make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate target density fields with the templates of imaging systematics to quantify systematic error and assess the effectiveness of systematics treatments and the significance of residual systematic error. The methodologies and statistical tools presented in this work will pave the path for future imaging surveys. 
+In this paper, we use the photometric sample of luminous red galaxies (LRGs) from the DESI Legacy Imaging Surveys Data Release 9, hereafter referred to as DR9, to constrain the local primordial non-Gaussianity parameter $\fnl$, while testing the robustness of our results against various sources of systematic effects. We also make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate the DR9 density field with the templates of imaging realities to assess the effectiveness of treatment methods and to characterize the significance of residual systematic error. Section \ref{sec:data} describes the DR9 sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory for modeling angular power spectrum and analysis techniques for quantifying various observational systematic effects. Finally, we present the results in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ constraints in Section \ref{sec:conclusion}.
