--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -1,5 +1,5 @@
 \section{Methodology}
-
+\label{sec:method}
 
 \subsection{Measuring Power Spectrum}
 Galaxy density contrast in pixel $i$ is defined as,
