--- a/refs.bib
+++ b/refs.bib
@@ -6,6 +6,25 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@ARTICLE{schmittfull2018PhRvD,
+       author = {{Schmittfull}, Marcel and {Seljak}, Uro{\v{s}}},
+        title = "{Parameter constraints from cross-correlation of CMB lensing with galaxy clustering}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = jun,
+       volume = {97},
+       number = {12},
+          eid = {123540},
+        pages = {123540},
+          doi = {10.1103/PhysRevD.97.123540},
+archivePrefix = {arXiv},
+       eprint = {1710.09465},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PhRvD..97l3540S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @article{gaiadr2,
