--- a/sections/data.tex
+++ b/sections/data.tex
@@ -1,8 +1,8 @@
 \section{Data}
 \label{sec:data}
-Luminous red galaxies are massive galaxies that lack active star formation and considered as one of the highly biased tracers of large scale structure. With a simple selection thanks to the 4000 A break in their spectra, they are widely targeted in previous galaxy redshift surveys \mr{CITE}, and their clustering and redshift properties are well studied \mr{CITE}. 
+Luminous red galaxies (LRGs) are massive galaxies that lack active star formation and considered as one of the highly biased tracers of large scale structure. LRGs have a simple color-magnitude selection due to a break around 4000 \AA~in their spectra. They are widely targeted in previous galaxy redshift surveys \mr{CITE}, and their clustering and redshift properties are well studied \mr{CITE}. 
 
-We use luminous red galaxies selected from the DESI Imaging Surveys Data Release 9 \citep{dey2018overview} using color-magnitude cuts described in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared \citep[see,][]{zhou2021clustering}, and summarized in Tab. \ref{tab:ts}.The DRsample is masked for bright stars, foreground bright galaxies as well as clusters of galaxies\footnote{See \url{https://www.legacysurvey.org/dr9/bitmasks/}}, and then binned into \textsc{healpix} \citep{gorski2005healpix} at $\textsc{nside}=256$ to construct the LRG density field, with an average density of $800$ deg$^{-2}$ with a coverage around $14000$ square degrees of the sky. Fig. \ref{fig:ng} shows observed density field of DR9 LRGs in deg$^{-2}$. There are some disconnected islands, hereafter referred to as \textit{spurious islands}, in the DECaLS North region at Declination below $-11$, which are removed from the sample to minimize potential calibration issues. Additionally, parts of the DECaLS South with Declination below $-30$ are cut from the sample, since similar calibration issues might infect our analysis. Section \ref{sec:results} presents how these cuts might alter constraints. DESI imaging is a multi-epoch dataset, and thus LRG density map is accounted for pixel incompleteness using a catalog of random points, uniformly scattered over the footprint with the same cuts and masks as DR9 LRGs. Fig. \ref{fig:nz} shows the redshift distribution of DR9 LRGs inferred from DESI Survey Validation \mr{CITE} and the evolution of  galaxy bias for our LRG sample adapted from \cite{zhou2021clustering}, consistent with the assumption of constant clustering amplitude. 
+We use LRGs selected from the DESI Imaging Surveys Data Release 9 \citep{dey2018overview} using color-magnitude cuts described in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared. The selection is described in detail in \cite{zhou2021clustering}, and summarized in Tab. \ref{tab:ts}.The DR9 sample is masked for bright stars, foreground bright galaxies as well as clusters of galaxies\footnote{See \url{https://www.legacysurvey.org/dr9/bitmasks/}}, and then binned into \textsc{healpix} \citep{gorski2005healpix} at $\textsc{nside}=256$ to construct the LRG density field, with an average density of $800$ deg$^{-2}$ with a coverage around $14000$ square degrees of the sky. Fig. \ref{fig:ng} shows observed density field of DR9 LRGs in deg$^{-2}$. There are some disconnected islands, hereafter referred to as \textit{spurious islands}, in the DECaLS North region at Declination below $-11$, which are removed from the sample to minimize potential calibration issues. Additionally, parts of the DECaLS South with Declination below $-30$ are cut from the sample, since similar calibration issues might infect our analysis. Section \ref{sec:results} presents how these cuts might alter constraints. DESI imaging is a multi-epoch dataset, and thus LRG density map is accounted for pixel incompleteness using a catalog of random points, uniformly scattered over the footprint with the same cuts and masks as DR9 LRGs. Fig. \ref{fig:ng} shows the redshift distribution of DR9 LRGs inferred from DESI Survey Validation \mr{CITE} and the evolution of  galaxy bias for our LRG sample adapted from \cite{zhou2021clustering}, consistent with the assumption of constant clustering amplitude. 
 
 \begin{table*}
     \caption{Selection criteria for the LRG targets.}
@@ -28,18 +28,12 @@ We use luminous red galaxies selected from the DESI Imaging Surveys Data Release
       }
 \end{table*}
 
-\begin{figure*}
-    \centering
-    \includegraphics[width=0.95\textwidth]{figures/lrgdens.pdf}
-    \caption{Observed density field of DESI Luminous Red Galaxies Data Release 9 in deg$^{-2}$. Spurious disconnected islands from the DECaLS North footprint at Declination below $-11$ and parts of the DECaLS South with Declination below $-30$ are dropped from the DR9 sample due to potential calibration issues.}
-    \label{fig:ng}
-\end{figure*}
-
 \begin{figure}
     \centering
+    \includegraphics[width=0.45\textwidth]{figures/lrgdens.pdf}
     \includegraphics[width=0.45\textwidth]{figures/nz_lrg.pdf}
-    \caption{Redshift distribution and bias evolution of DESI LRGs with the assumption of constant clustering amplitude.}
-    \label{fig:nz}
+    \caption{Top: Observed density field of DESI Luminous Red Galaxies Data Release 9 in deg$^{-2}$. Spurious disconnected islands from the DECaLS North footprint at Declination below $-11$ and parts of the DECaLS South with Declination below $-30$ are dropped from the DR9 sample due to potential calibration issues. Bottom: Redshift distribution and bias evolution of DESI LRGs. The redshift distribution is deducted from spectroscopy and the bias model assumes a constant clustering amplitude.}
+    \label{fig:ng}
 \end{figure}
 
 
