--- a/ms.tex
+++ b/ms.tex
@@ -33,7 +33,7 @@
 \usepackage{style} % the settings are all here 
 \usepackage{booktabs,array}  
 
-\title[PNG with DESI Imaging]{Constraints on local primordial non-Gaussianity from the large-scale clustering of DESI Luminous Red Galaxies}
+\title[PNG with DESI Imaging]{local primordial non-Gaussianity from the large-scale clustering of photometric DESI luminous red galaxies}
 
 \input{sections/authorlist}
 
