--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -8,6 +8,7 @@ Standard slow roll inflation predicts $\fnl$ to be of order $10^{-2}$, while mul
 
 Current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. CMB S4, next generation of CMB experiments, will improve this constraint but since CMB is limited by cosmic variance, it alone cannot further enhance to break the degeneracy amongst inflationary models. However, combining CMB with LSS data could cancel cosmic variance, partially if not completely, and enhance these limits to a precision level required to differentiate between various inflationary models \citep[see, e.g.,][]{schmittfull2018PhRvD}.  
 
-PNG alters local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result it introduces a $k^{-2}$-dependent shift in halo bias which leaves its signature on the large scales in the two-point clustering of galaxies and quasars \citep[see, e.g.,][]{dalal2008imprints}. Measuring $\fnl$ using the scale-dependent bias is however very challenging due to the presence of observational systematic effects which cause excess clustering signal on the same scales sensitive to $\fnl$. Previous studies with galaxy and quasar clustering have been hindered dramatically by spurious fluctuations in target density, which are due to the variation of imaging properties across the sky \citep{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS \mr{DRX} does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to relax the selection criteria to  include fainter targets. Assuming imaging systematics are under control, the next generation of galaxy surveys such as DESI and the Rubin Observatory are forecast to yield unprecedented constraints on $\fnl$.
+PNG alters local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result it introduces a $k^{-2}$-dependent shift in halo bias which leaves its signature on the large scales in the two-point clustering of large-scale structure \citep[see, e.g.,][]{dalal2008imprints}. Measuring $\fnl$ using the scale-dependent bias is however very challenging due to the presence of systematic effects which cause excess clustering signal on the same scales sensitive to $\fnl$. These systematics can be broadly classified into theoretical and observational. Major theoretical systematic effects are caused by the geometry of survey -- a fact that we never observe the full night sky -- which results in coupling different angular modes. The other effect is commonly referred to as integral constraint and is raised due to our estimation of the mean density directly from data itself, which pushes the clustering signal on modes near the size of survey to zero \mr{(Peacock and Nicholson 1991, Wilson et al 2015)}. Ignoring any of these effects leads to biased $\fnl$ constraints \mr{(see, e.g., Riquelme et al 2022)}. On the other hand, observational systematics are primarily caused by varying imaging properties across the sky or calibration issues which leave spurious fluctuations in target density field \mr{(see, e.g., Huterer et al 2013)}. This type of systematic error is much more difficult to handle and has hindered previous studies of local PNG with galaxy and quasar clustering \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS \mr{DRX} does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to loosen the selection criteria to incorporate fainter targets. 
 
-In this paper, we use the photometric sample of luminous red galaxies (LRGs) from the DESI Legacy Imaging Surveys Data Release 9, hereafter referred to as DR9, to constrain the local primordial non-Gaussianity parameter $\fnl$, while testing the robustness of our results against various sources of systematic effects. We also make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate the DR9 density field with the templates of imaging realities to assess the effectiveness of treatment methods and to characterize the significance of residual systematic error. Section \ref{sec:data} describes the DR9 sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory for modeling angular power spectrum and analysis techniques for quantifying various observational systematic effects. Finally, we present the results in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ constraints in Section \ref{sec:conclusion}.
+
+Assuming imaging systematics are under control, the next generation of galaxy surveys such as DESI and the Rubin Observatory are forecast to yield unprecedented constraints on $\fnl$. Therefore, one of the primary focus of this work is to present an exquisite study of imaging systematic error and enhanced statistical tools to address the data quality for measuring $\fnl$. In this paper, we use the photometric sample of galaxies from the DESI Legacy Imaging Surveys Data Release 9, hereafter referred to as DR9, to constrain the local primordial non-Gaussianity parameter $\fnl$, while testing the robustness of our results against various sources of systematic effects. We also make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate the DR9 density field with the templates of imaging realities to assess the effectiveness of treatment methods and to characterize the significance of residual systematic error. Section \ref{sec:data} describes the DR9 sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory for modeling angular power spectrum and analysis techniques for quantifying various observational systematic effects. Finally, we present the results in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ constraints in Section \ref{sec:conclusion}.
